<resources>
    <string name="app_name">Power Builder Assistant</string>
    <string name="screen_training_dairy_name">Training dairy</string>
    <string name="add_record">Add record</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="empty">empty</string>
    <string name="set_result_header">Подход %1$d</string>
    <string name="repeats">Повторы</string>
    <string name="weight">Вес снаряда</string>
    <string name="done_exercise_title">Выполненное упражнение</string>
    <string name="save_set_dialog_error">Не указано количество повторов</string>
    <string name="menu_delete">Удалить</string>
    <string name="menu_apply">Сохранить</string>
    <string name="dialog_delete_exercise">Удалить упражнение %1$s из тренировки?</string>
    <string name="exercise_deleted">Упражнение удалено</string>
    <string name="rtt_new_set">Новый подход</string>
    <string name="rtt_stop_training">ЗАВЕРШИТЬ</string>
    <string name="rtt_start_training">НАЧАТЬ</string>
    <string name="rtt_current_set">Текущий подход: %1$d</string>
    <string name="rtt_sets_done">Подходов выполнено: %1$d</string>
    <string name="rtt_total_time">Общее время: %1$s</string>
    <string name="rtt_stop_training_dialog">Завершить тренировку?</string>
    <string name="statistics">Статистика</string>
    <string-array name="exercises_array">
        <item>Приседания</item>
        <item>Сгибания/разгибания ног в тренажере</item>
        <item>Становая тяга(румынская на согнутых ногах)</item>
        <item>Тяга сумо</item>
        <item>Гиперэкстензия</item>
        <item>Жим штанги на горизонте</item>
        <item>Жим штанги под углом</item>
        <item>Жим штанги стоя</item>
        <item>Разгибания рук с верхнего блока</item>
        <item>Отжимания от брусьев</item>
        <item>Жим гантелей под углом</item>
        <item>Жим штанги из-за головы</item>
    </string-array>




    <string name="viewGithub">View on GitHub</string>
    <string name="reportProblem">Problem Report</string>
    <string name="viewWebsite">Developer Website</string>
    <string name="actionSave">Save to Gallery</string>

    <string name="animateX">Animate X</string>
    <string name="animateY">Animate Y</string>
    <string name="animateXY">Animate XY</string>

    <string name="actionToggleValues">Toggle Values</string>
    <string name="actionToggleYValues">Toggle Y-Values</string>
    <string name="actionToggleXValues">Toggle X-Values</string>

    <string name="actionToggleIcons">Toggle Icons</string>
    <string name="actionToggleHighlight">Toggle Highlight</string>
    <string name="actionTogglePinch">Toggle PinchZoom</string>
    <string name="actionToggleAutoScale">Toggle Auto Scale</string>

    <string name="actionToggleLineValues">Toggle Line Values</string>
    <string name="actionToggleBarValues">Toggle Bar Values</string>
    <string name="actionToggleBarBorders">Toggle Bar Borders</string>
    <string name="actionToggleFilled">Toggle Filled</string>
    <string name="actionToggleCircles">Toggle Circles</string>
    <string name="actionToggleCandleShadow">Toggle Shadow Color</string>

    <string name="actionToggleCubic">Toggle Cubic</string>
    <string name="actionToggleStepped">Toggle Stepped</string>
    <string name="actionToggleHorizontalCubic">Toggle Horizontal Cubic</string>

    <string name="actionAddEntry">Add Entry</string>
    <string name="actionFeedMultiple">Add Multiple</string>
    <string name="actionRemoveEntry">Remove Entry</string>
    <string name="actionAddDataSet">Add Data Set</string>
    <string name="actionRemoveDataSet">Remove Data Set</string>
    <string name="actionClearChart">Clear chart</string>

    <string name="actionTogglePercent">Toggle Percent</string>
    <string name="actionToggleMinAngles">Toggle Minimum Angles</string>
    <string name="actionToggleHole">Toggle Hole</string>
    <string name="actionToggleCurvedSlices">Toggle Curved Slices</string>
    <string name="actionDrawCenterText">Draw Center Text</string>
    <string name="actionToggleHighlightCircle">Toggle Highlight Circle</string>
    <string name="actionToggleRotation">Toggle Rotation</string>
    <string name="actionToggleSpin">Spin Animation</string>

    <string name="dash">-</string>
    <string name="scrollViewStart">START OF SCROLLVIEW</string>
    <string name="scrollViewEnd">END OF SCROLLVIEW</string>
</resources>
